add vig uploader, style and js for btn_adding

--- a/package.json
+++ b/package.json
@@ -1,12 +1,11 @@
 {
     "devDependencies": {
+        "@fortawesome/fontawesome-free": "^5.12.0",
         "core-js": "^3.0.0",
         "regenerator-runtime": "^0.13.2",
         "webpack-notifier": "^1.6.0"
     },
     "license": "UNLICENSED",
     "private": true,
-    "scripts": {
-
-    }
+    "scripts": {}
 }
