--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -27,7 +27,7 @@ security:
             form_login:
                 check_path: login
                 target_path_parameter: go_to
-                failure_path_parameter: back_to
+                failure_path_parameter: login
             # https://symfony.com/doc/current/security/impersonating_user.html
             # switch_user: true
 
