--- a/package.json
+++ b/package.json
@@ -1,11 +1,16 @@
 {
     "devDependencies": {
-        "@fortawesome/fontawesome-free": "^5.12.0",
+        "@symfony/webpack-encore": "^0.30.0",
         "core-js": "^3.0.0",
         "regenerator-runtime": "^0.13.2",
         "webpack-notifier": "^1.6.0"
     },
     "license": "UNLICENSED",
     "private": true,
-    "scripts": {}
+    "scripts": {
+        "dev-server": "encore dev-server",
+        "dev": "encore dev",
+        "watch": "encore dev --watch",
+        "build": "encore production --progress"
+    }
 }
